@@ -5,7 +5,11 @@ from lxml.builder import E
 import lxml.etree
 import os
 
-from zope.app.schema.vocabulary import IVocabularyFactory
+try:
+    from zope.app.schema.vocabulary import IVocabularyFactory
+except ImportError:
+    from zope.schema.interfaces import IVocabularyFactory
+    
 from zope.interface.declarations import implements
 from zope.schema.vocabulary import SimpleVocabulary, SimpleTerm
 
