@@ -5,6 +5,7 @@ Changelog
 ------------------
 
 - fix css interlinea (#261) [nekorin]
+- Plone 4.1 compatibility [andrea]
 
 1.0.4 (2011-11-02)
 ------------------
